src/objects/Area_cadena_de_valor__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conocimiento__c</fullName>
        <label>Conocimiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Areas cadena de valor</relationshipLabel>
        <relationshipName>Areas_cadena_de_valor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interes__c</fullName>
        <label>Interes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <label>Reto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solucion__c</fullName>
        <label>Solucion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Areas cadena de valor</relationshipLabel>
        <relationshipName>Areas_cadena_de_valor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Area cadena de valor</label>
    <nameField>
        <label>Nombre de cadenaDeValor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas cadena de valor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>